[package]
authors = ["Dustin Knopoff <dustinknopoff@gmail.com>"]
edition = "2018"
name = "taeko-core"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = "0.15"

[target.'cfg(wasm)'.dev-dependencies]
wasm-bindgen = "0.2"
