[package]
authors = ["Dustin Knopoff <rust@knopoff.dev>"]
edition = "2018"
name = "taeko"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
taeko-core = {path = "../taeko-core"}
taeko-fs-walker = {path = "../taeko-plugins/taeko-fs-walker"}
taeko-markdown-transformer = {path = "../taeko-plugins/taeko-markdown-transformer"}
