[package]
authors = ["Dustin Knopoff <rust@knopoff.dev>"]
edition = "2018"
name = "taeko-site"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
globwalk = "*"
lazy_static = "1.4.0"
taeko = {path = "../../taeko"}
tera = "1.4.0"
