[package]
authors = ["Dustin Knopoff <dustinknopoff@gmail.com>"]
edition = "2018"
name = "taeko-fs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[target.'cfg(wasm)'.dev-dependencies]
wasm-bindgen = "0.2"
