[package]
authors = ["Dustin Knopoff <rust@knopoff.dev>"]
edition = "2018"
name = "taeko-markdown-transformer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frontmatter = {git = "https://github.com/dustinknopoff/frontmatter", branch = "master"}
pulldown-cmark = "0.7"
taeko-core = {path = "../../taeko-core"}

[dev-dependencies]
taeko-fs-walker = {path = "../taeko-fs-walker"}
